Bug 74446 - Styles dropdown menu has wrong tooltip: "Create style from selection"
Summary: Styles dropdown menu has wrong tooltip: "Create style from selection"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Roman Kuznetsov
URL:
Whiteboard: target:6.3.0
Keywords: difficultyBeginner, easyHack, skillDesign, topicDesign
: 85415 (view as bug list)
Depends on:
Blocks: Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2014-02-03 15:38 UTC by Stefan Knorr
Modified: 2020-01-24 13:22 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Knorr 2014-02-03 15:38:15 UTC
1. Open the Styles panel (press F11).
2. Find the rightmost the button on the top of the panel.
3. Hover over this button with the mouse. See that it reads "Create style
   from selection"

A better inscription for this would probably just be "Styles", since really this menu is a bit of a catch-all, containing "new style from selection," "update style," and "load styles."

Also, its icon is not very speaking (or accurate, with the paragraph sign in it). Not sure what the solution to that is, but quite possibly a generic gear.
Comment 1 Stefan Knorr 2014-02-03 15:41:57 UTC
Btw, the exact same bug exists in the sidebar (View > Sidebar) implementation of the Styles panel. Probably needs to be fixed separately.
Comment 2 Jorendc 2014-06-13 07:56:20 UTC
Repro and I agree. Exact/current tooltip is "New style from selection".

Kind regards,
Joren
Comment 3 QA Administrators 2015-07-18 17:42:35 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2015-10-16 19:14:38 UTC
Still says New style from selection. But what would be the best tooltip text? "Styles" is a bit vague in the context..

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 186f32f63434e16ff5776251657f902d5808ed3d
TinderBox: Win-x86@39, Branch:master, Time: 2015-10-16_09:42:47
Locale: en-US (fi_FI)
Comment 5 QA Administrators 2016-11-08 11:03:44 UTC Comment hidden (obsolete)
Comment 6 Roman Kuznetsov 2019-01-22 08:23:16 UTC
Heiko, can you look at it?
Comment 7 Heiko Tietze 2019-01-22 08:47:01 UTC
Rather than just "Style" I'd go with "Manage Styles". However, the current tooltip makes it clear that all function underneath (new, update, load) belong to the selection (well at least new and update). We could also rename the actual commands... 

(On the agenda for the next meeting)
Comment 8 Cor Nouws 2019-01-22 20:32:33 UTC
What we actually see, is the tooltip from the top item in the menu.
That would make sense if it was a split button, that starts the action on click, and opens the menu on the arrow position or keep mouse pressed.

For the tool tip: "Styles actions"  ?
Comment 9 Heiko Tietze 2019-01-24 09:32:33 UTC
Let's go with 
* "New Style from Selection" -> "Styles actions" 
** "New Style..." -> "New Style from Selection"
** "Update Style" -> "Update Selected Style"
** (insert a separator before "Load Styles...")
Comment 10 Commit Notification 2019-02-04 10:41:57 UTC
Roman Kuznetsov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6acf4af3c90cca4edbad4fceb9c07bf90805a224%5E%21

tdf#74446 Changed item names in Styles dropdown menu on Sidebar

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Cor Nouws 2019-02-04 12:47:04 UTC
(In reply to Heiko Tietze from comment #9)
> Let's go with 
> * "New Style from Selection" -> "Styles actions" 
> ** "New Style..." -> "New Style from Selection"
> ** "Update Style" -> "Update Selected Style"
> ** (insert a separator before "Load Styles...")

Nice!
Comment 12 Cor Nouws 2019-03-16 08:47:32 UTC
*** Bug 85415 has been marked as a duplicate of this bug. ***