tdf#74446 Changed item names in Styles dropdown menu on Sidebar

Change-Id: I16ff0d5ff896d896cd2e261ea86a8df8d9b45f3b
Reviewed-on: https://gerrit.libreoffice.org/66974
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
Tested-by: Heiko Tietze <tietze.heiko@gmail.com>